tests/models/struct/unnamed/bool/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = false)]
    bool
);
fn main() {}
